--- a/CustomerQueryTracker/src/main/resources/application.properties
+++ b/CustomerQueryTracker/src/main/resources/application.properties
@@ -1,4 +1,8 @@
+server.port=8080
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/cogent
+spring.datasource.url=jdbc:mysql://localhost:3306/project5
 spring.datasource.username=root
 spring.datasource.password=S(*$NQ#DF$DFJW$utry(GQW#R$*T)FGKJ
+
+spring.jpa.hibernate.ddl-auto=update
